--- a/Jinwei_Zhang/PassportAuthenticationLearning/package.json
+++ b/Jinwei_Zhang/PassportAuthenticationLearning/package.json
@@ -17,6 +17,9 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.16.2",
+    "http-errors": "^1.7.3",
+    "jade": "^1.11.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.6.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
